Removed padding from buttons within timer blocks, as these were causing an issue on mobile

--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -142,6 +142,7 @@ header {
 				button {
 					background: none;
 					border: none;
+					padding: 0;
 
 					&[disabled] {
 						opacity: 0.65;
